--- a/index.html
+++ b/index.html
@@ -1,14 +1,14 @@
 <!DOCTYPE html>
 <html>
   <head>
-
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
     <title>Colmar Academy</title>
     <link rel="stylesheet" type="text/css" href="./resources/css/reset.css">
     <link rel="stylesheet" type="text/css" href="./resources/css/style.css">
     <link rel="shortcut icon" href="./resources/images/favicon.ico" type="image/x-icon">
     <link rel="icon" href="./resources/images/favicon.ico" type="image/x-icon">
     <link href="https://fonts.googleapis.com/css?family=Lato:300,400,700|Martel+Sans:300,400,600,700" rel="stylesheet">
-    
+
 
   </head>
   <body>
